# my_dev_tools

./: .gitignore  README.md  gtags.conf
build_shell/: __main__.py  builder.py  cargo.py  config.py  editor.py  font_select.py  ghs.py  main.py  ninja.py  setup.cfg
build_shell/builders/: cargo.py  ghs.py  ninja.py
build_shell/src/build_shell/: __main__.py  main.py
inspector/: __main__.py  config.py  global.py  main.py  prettify.py
vim/vimfiles/: menu.vim
vim/vimfiles/autoload/my_bits/: tabify.vim
vim/vimfiles/ftplugin/: cpp.vim  python.vim
vim/vimfiles/plugin/: my_bits.vim
vim/vimfiles/pythonx/: build.py  gtags.py
vim/vimfiles/pythonx/lsp/: client.py
vimfiles/: gvimrc  vimrc
vimfiles/autoload/my_bits/: lsp.vim  tabify.vim
vimfiles/ftplugin/: c.vim  python.vim
vimfiles/plugin/: my_bits.vim
vimfiles/pythonx/: detect_indent.py
vimfiles/pythonx/build_types/: ghs.py
vimfiles/pythonx/lsp/: client.py  server.py
