[metadata]
name = Build shell
version = 1.0
description = Very light weight build shell
url = https://github.com/peter1010/my_dev_tools
author = Peter
author_email = code@peterleese.org
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.12

[options.packages.find]
where = src
